# R-Type

./: .gitignore  CMakeLists.txt  Doxyfile  ECS_8hpp.html  ECS_8hpp_source.html  IGraphical_8hpp.html  IGraphical_8hpp_source.html  LICENSE  README.md  annotated.html  assets_8cpp.html  boost__udp_8hpp.html  boost__udp_8hpp_source.html  build.cmd  build.sh  classCollisionSystem-members.html  classCollisionSystem.html  classDamageSystem-members.html  classECS-members.html  classECS.html  classGraphicalSystem-members.html  classIReceiver-members.html  classIReceiver.html  classISender-members.html  classISender.html  classISystem.html  classImmunitySystem-members.html  classImmunitySystem.html  classLevels-members.html  classLevels.html  classMovementSystem.html  classNetwork.html  classNetwork_1_1Sender-members.html  classNetwork_1_1Sender.html  classParser-members.html  classParser.html  classReceiver-members.html  classReceiver.html  classSender-members.html  classSender.html  (+132 more)
.github/workflows/: doxygen.yaml  doxygen.yml  mirror.yml  protectMain.yml
assets/sprites/: hud-frame-futuristic-game-target-borders-scifi-empty-banners-text_313905-483.avif
client/: CMakeLists.txt
client/includes/: IGraphical.hpp  actions.hpp  client.hpp  input.hpp  keystates.hpp  network.hpp
client/src/: client.cpp  ecs.cpp  input.cpp  inputs.cpp  keybindings.cpp  main.cpp  rendering.cpp
client/src/scenes/: connection.cpp  game.cpp  gameOver.cpp  mainMenu.cpp  sceneManager.cpp  selectgame.cpp  settings.cpp  waiting_room.cpp
docs/: Doxyfile
docs/pages/: RFC_protocol.dox  dependencies.dox  level_config.dox  level_parser.dox  mainpage.dox  network_message_norm.dox  new_component.dox  server_message_norm.dox
engine/: boost_udp.cpp
engine/includes/: ECS.hpp  boost.hpp  components.hpp  network.hpp  parser.hpp  systems.hpp
engine/src/: ECS.cpp
html/: ECS_8hpp.html  classDamageSystem.html  classECS-members.html  classECS.html  classGraphicalSystem.html  classISystem-members.html  classISystem.html  classMovementSystem-members.html  classNetwork_1_1Receive-members.html  classNetwork_1_1Receive.html  classParser-members.html  classes.html  classrtype_1_1Client-members.html  classrtype_1_1Client.html  client_2includes_2network_8hpp_source.html  client_8cpp.html  client_8hpp.html  client_8hpp_source.html  components_8hpp.html  dependencies_page.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_996f45160da62e1a3d7f6046fad68f51.html  dir_b565d458ba0ce2faccd0ea2cd60c04eb.html  dir_db3a54907829b36871118d03417739cd.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  globals_func.html  index.html  network_protocol_rfc.html  parser_8hpp.html  server_2includes_2network_8hpp.html  server_8hpp.html  structAttack.html  structDamage.html  structGraphical-members.html  structGraphical.html  structHealth-members.html  structPosition-members.html  structRotation-members.html  structRotation.html  (+2 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_b.js  all_e.js  classes_3.js  classes_4.js  (+18 more)
latex/: ECS_8hpp.tex  annotated.tex  classDamageSystem.eps  classDamageSystem.tex  classECS.tex  classGraphicalSystem.eps  classGraphicalSystem.tex  classISystem.eps  classISystem.tex  classMovementSystem.eps  classMovementSystem.tex  classNetwork.tex  classNetwork_1_1Receive.tex  classNetwork_1_1Sender.tex  classParser.tex  classrtype_1_1Client.tex  client_2includes_2network_8hpp.tex  client_8cpp.tex  client_8hpp.tex  components_8hpp.tex  dependencies_page.tex  files.tex  hierarchy.tex  index.tex  main_8cpp.tex  network_message_norm.tex  network_protocol_rfc.tex  parser_8cpp.tex  parser_8hpp.tex  refman.tex  server_2includes_2network_8hpp.tex  server_8cpp.tex  server_8hpp.tex  structAttack.tex  structDamage.tex  structGraphical.tex  structHealth.tex  structPosition.tex  structRotation.tex  structSprite.tex  (+3 more)
pages/: mainpage.dox  network_message_norm.dox
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  (+44 more)
server/: CMakeLists.txt
server/includes/: enemies.hpp  levels.hpp  network.hpp  parser.hpp  server.hpp
server/levels/config_files/: level_1.conf  level_3.conf
server/src/: enemies.cpp  init_entity.cpp  levels.cpp  parser.cpp  server.cpp
tests/: ECSTest.cpp
(+4 files in other folders)
